added some usages of comparator